src/test/examples/custom/valid/class/canAssignInstanceAttributeToAnotherInstanceAttribute.wacc
# Can assign instance attribute to another instance attribute if same type

begin
  class Vehicle is
    private int name ;
    public int tyres 
    public int getName() is 
      return name
    end
    public int getNumber() is
      return tyres
    end
    public int setNumber(int offset) is
      tyres = tyres + offset ;
      return tyres
    end
  end
  Vehicle bus = new Vehicle(7, 6) ;
  Vehicle car = new Vehicle(6, 4) ;
  bus.tyres = car.tyres ;
  println bus.tyres 
end








